--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,6 @@
     android:fitsSystemWindows="true"
     tools:context=".activities.MainActivity"
     android:id="@+id/mainCoordinateLayout">
-
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,17 +18,27 @@
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
-
+        <android.support.design.widget.TabLayout android:id="@+id/sliding_tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabMode="scrollable"
+            />
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <!--<include layout="@layout/content_main" />-->
 
-    <FrameLayout
-        android:id="@+id/fragmentContainer"
+    <!--<FrameLayout-->
+    <!--android:id="@+id/fragmentContainer"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:layout_marginTop="@dimen/appbar_margin_bottom">-->
+
+    <!--</FrameLayout>-->
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/appbar_margin_bottom">
-
-    </FrameLayout>
-
-</android.support.design.widget.CoordinatorLayout>
+    </android.support.v4.view.ViewPager>
+    </android.support.design.widget.CoordinatorLayout>
