--- a/app/src/main/res/layout/adapter_photos_item.xml
+++ b/app/src/main/res/layout/adapter_photos_item.xml
@@ -41,7 +41,7 @@
         android:gravity="center_vertical"
         style="@style/title"
         android:text="@string/save"
-        android:clickable="true"
+        android:visibility="gone"
         />
 
 </RelativeLayout>
