chore: Signed the application using release key fix: removed display of tags for each photo, app supports only portrait mode now,passing weak reference of context to adapters test: added unit test cases for lifecycle activities, fragments adapter and database

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
     <!--android:layout_marginTop="@dimen/appbar_margin_bottom">-->
 
     <!--</FrameLayout>-->
+
     <android.support.v4.view.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pager"
@@ -41,4 +42,14 @@
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/appbar_margin_bottom">
     </android.support.v4.view.ViewPager>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_margin="@dimen/fab_margin"
+        app:backgroundTint="@color/white"
+        android:src="@drawable/pixabay"
+        />
+
     </android.support.design.widget.CoordinatorLayout>
