--- a/app/src/main/res/layout/adapter_photos_item.xml
+++ b/app/src/main/res/layout/adapter_photos_item.xml
@@ -27,6 +27,7 @@
         android:layout_alignBottom="@+id/itemImage"
         android:layout_alignParentStart="true"
         style="@style/title"
+        android:visibility="gone"
         />
 
     <TextView
